# gitbark

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.adoc  README.md  mypy.ini  pyproject.toml
.bark/: bark_rules.yaml  commit_rules.yaml  requirements.txt
.bark/pubkeys/: dain.pub  elias.pub
.github/workflows/: ubuntu.yml
doc/: Overview.adoc  Usage.adoc
gitbark/: cache.py  command.py  commit.py  core.py  git.py  git_api.py  globals.py  logging.py  navigation.py  objects.py  project.py  reference_update.py  report.py  rule.py  store.py  util.py  wd.py
gitbark/_cli/: __main__.py  util.py
gitbark/bark_core/: bark_module.yaml
gitbark/bark_core/files/: file_not_modified.py
gitbark/bark_core/parents/: disallow_invalid_parents.py  invalid_parents.py  max_parents.py  require_number_of_parents.py
gitbark/bark_core/signatures/: add_detached_signatures_cmd.py  approve_cmd.py  require_approval.py  require_signature.py  util.py
gitbark/bark_core/signatures/commands/: add_approvals_cmd.py  add_detached_signatures_cmd.py  approve_cmd.py
gitbark/cli/: __main__.py  util.py
gitbark/commands/: install.py  prepare_merge_msg.py  setup.py  verify.py
gitbark/commands/hooks/: prepare-commit-msg  reference_transaction
gitbark/git/: commit.py  git.py  reference_update.py
gitbark/rules/: __init__.py  branch_rules.py  commit_rules.py  import_rules.py  rule.py
gitgate/: commit.py  git_api.py  reference_update.py  report.py
gitgate/_cli/: __main__.py
gitgate/commands/: verify.py
gitgate/rules/: branch_rules.py  commit_rules.py
pytest_gitbark/: plugin.py  util.py
tests/: __init__.py  conftest.py  performance.py  performance2.py  performance3.py  test_install.py  test_verify.py  test_verify_hooks.py  test_verify_manual.py  util.py
tests/clients/.gnupg/: tofu.db
tests/clients/.gnupg/openpgp-revocs.d/: 9746FCFF80D4D1EE94D2BD3B7DD61D90C0FC215E.rev  FF907C686BCA7BB51C9B9A753504E1A6A48F7C8E.rev
tests/clients/.gnupg/private-keys-v1.d/: 3CFCE8DC789BF2F1390DA0F630A1ACF37F83EC0E.key  B33D1BEA3C06F5C7B7D8E8DC3A6E9154FBA48F33.key  C4CCEF47DEB23DE52D927B7E40DEA22A8E85BA8D.key  EAC48B636D4556229EC8A3F5D66B54639F609D0D.key
tests/test_bark_module/: setup.cfg  setup.py
tests/test_bark_module/test_bark_core/: rules.py
tests/utils/: util.py
tests/utils/gpg/.gnupg/: .#lk0x00006000008f04b0.ml-ebonnici-01.19045  .#lk0x000060000181c0c0.ml-ebonnici-01.22262  .#lk0x0000600001b1c120.ml-ebonnici-01.70916  .#lk0x0000600002114840.ml-ebonnici-01.99056  .#lk0x000060000211d3b0.ml-ebonnici-01.63583  .#lk0x0000600002c04540.ml-ebonnici-01.70923  .#lk0x0000600003a18030.ml-ebonnici-01.57022  pubring.kbx  pubring.kbx~  random_seed  tofu.db  trustdb.gpg
tests/utils/gpg/.pubkeys/: Alice.asc  Alice2.asc  Bob.asc  Bob2.asc  Eve.asc
tests/utils/hooks/: prepare-commit-msg  reference-transaction
tests/utils/ssh/: allowed_signers
verifier/commands/: verify.py
verifier/models/: commit.py  reference_update.py  report.py
verifier/rules/: branch_rules.py  commit_rules.py
verifier/wrappers/: git_wrapper.py
(+20 files in other folders)
