
[tool.poetry]
name = "gitbark"
version = "0.1.0"
description = "A git repository consistency verification framework"
authors = ["Elias Bonnici <elias.bonnici@yubico.com>"]
license = "APACHE-2.0"
readme = "README.md"
packages=[{include = "gitbark"}]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
click = "^8.1.3"
colorama = "^0.4.6"
pygit2 = "^1.12.1"

[tool.poetry.scripts]
bark = "gitbark.cli.__main__:main"

[tool.poetry.plugins."bark_commit_rules"]
all = "gitbark.rule:AllCommitRule"
any = "gitbark.rule:AnyCommitRule"
none = "gitbark.rule:NoneCommitRule"

[tool.poetry.plugins."bark_ref_rules"]
all = "gitbark.rule:AllRefRule"
any = "gitbark.rule:AnyRefRule"
none = "gitbark.rule:NoneRefRule"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-gitbark = {git = "https://github.com/YubicoLabs/pytest-gitbark.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
